# Simple_BPE

./: README.md  main.py  normalization.py  pyproject.toml
src/bpe/: encode_decode.py  normalization.py  train.py
