[project]
name = "simple-bpe" # PyPI distribution name
version = "0.0.1"
authors = [{ name="Alar Akilbekov", email="alar.akilbekov@gmail.com" }]
description = "Simple Byte-Pair Encoding (BPE) implementation"
readme = "README.md"
requires-python = ">=3.10"
license = "MPL-2.0"
license-files = ["LICEN[CS]E*"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
dependencies = []

[project.urls]
Homepage = "https://github.com/alarxx/Simple_BPE"
Issues = "https://github.com/alarxx/Simple_BPE/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

# package name is simple-bpe, but import name is bpe
[tool.hatch.build.targets.wheel]
packages = ["src/bpe"]
